@@ -4,3 +4,4 @@ _Description=File Manager Plugin for Anjuta.
 Location=anjuta-file-manager:FileManagerPlugin
 Icon=anjuta-file-manager-plugin.png
 Interfaces=IAnjutaFileManager
+
