@@ -1,5 +1,15 @@
 2004-05-14  Johannes Schmid <jhs@cvs.gnome.org>
 	
+	* plugins/editor/anjuta-docman.c: gchar* to 
+	const gchar* in arguments
+	* plugins/editor/text_editor.c: Implemented IAnjutaFile
+	Interface
+	* plugins/file-manager/an_file_view.c: Open files on
+	double-click. Does not work yet because it does not
+	find IAnjutaFile interface in document manager
+
+2004-05-14  Johannes Schmid <jhs@cvs.gnome.org>
+	
 	* plugins/editor/anjuta-docman.c
 	* plugins/editor/text_editor.c:
 	Made close button working, made multiple selection in
